Устранение замечаний для прохождения ревью